fix: resolve Java 8 compilation and Code Quality SpotBugs dependency
Replace Optional.isEmpty() (Java 11+) with !isPresent() in Module.java
and Path.of() (Java 11+) with Paths.get() in WasiPreview2Config.java
for Java 8 source compatibility.

Install parent pom before SpotBugs/PMD in Code Quality job to resolve
transitive dependency chain for wasmtime4j-native-loader.